[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Captura_de_tela_de_2020-07-25_16-34-27-removebg-preview(1).png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Paredes" type="Node" parent="."]

[node name="A" type="Position2D" parent="Paredes"]

[node name="B" type="Position2D" parent="Paredes"]
position = Vector2( 810, 0 )

[node name="C" type="Position2D" parent="Paredes"]
position = Vector2( 0, 675 )

[node name="D" type="Position2D" parent="Paredes"]
position = Vector2( 810, 675 )

[node name="Entrada" type="Node" parent="."]

[node name="A" type="Position2D" parent="Entrada"]
position = Vector2( 665, 0 )

[node name="B" type="Position2D" parent="Entrada"]
position = Vector2( 665, 370 )

[node name="C" type="Position2D" parent="Entrada"]
position = Vector2( 810, 370 )

[node name="Next" type="Node" parent="."]

[node name="A" type="Position2D" parent="Next"]
position = Vector2( 0, 370 )

[node name="B" type="Position2D" parent="Next"]
position = Vector2( 665, 370 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 408, 336 )
current = true

[node name="Text" type="Node2D" parent="."]
z_index = -3

[node name="ColorRect" type="ColorRect" parent="Text"]
margin_left = -104.0
margin_top = -48.0
margin_right = 1016.0
margin_bottom = 736.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="A1" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/A1"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A2" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/A2"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A3" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/A3"]
margin_left = -30.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L1" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/L1"]
margin_left = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L2" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/L2"]
margin_left = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L3" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/L3"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L4" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/L4"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L5" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/L5"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L6" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/L6"]
margin_left = 5.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L7" type="Node2D" parent="Text"]

[node name="Text" type="Label" parent="Text/L7"]
margin_left = 5.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Porta_colmeia" type="Node2D" parent="."]
rotation = 1.5708
scale = Vector2( -1, 1 )

[node name="Sprite" type="Sprite" parent="Porta_colmeia"]
texture = ExtResource( 2 )
offset = Vector2( -39, 0 )

[node name="Portas" type="Node2D" parent="."]

[node name="Entrada" type="Sprite" parent="Portas"]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 719, 0 )

[node name="Entrada2" type="Sprite" parent="Portas"]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 574, 0 )

[node name="Button" type="Button" parent="."]
margin_left = 328.0
margin_top = 680.0
margin_right = 528.0
margin_bottom = 724.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="."]
margin_left = -32.0
margin_right = -20.0
margin_bottom = 675.0
max_value = 675.0
step = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="Node2D" parent="."]
scale = Vector2( 1, -1 )

[node name="VScrollBar2" type="VScrollBar" parent="Scroll"]
margin_left = 872.0
margin_top = -672.0
margin_right = 884.0
grow_horizontal = 0
grow_vertical = 0
max_value = 675.0
step = 5.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="VScrollBar" to="." method="_on_VScrollBar_value_changed"]
[connection signal="value_changed" from="Scroll/VScrollBar2" to="." method="_on_VScrollBar2_value_changed"]
